[package]
name = "url-shortler"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
dashmap = "5.5.3"
http-body-util = "0.1.0"
mime = "0.3.17"
mockall = "0.12.1"
nanoid = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
